--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2013 Salzburg Research.
-  ~
   ~  Licensed under the Apache License, Version 2.0 (the "License");
   ~  you may not use this file except in compliance with the License.
   ~  You may obtain a copy of the License at
@@ -19,35 +17,48 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>at.newmedialab.lmf</groupId>
-        <artifactId>lmf-parent</artifactId>
-        <version>3.1.0</version>
+        <groupId>org.apache.marmotta</groupId>
+        <artifactId>marmotta-parent</artifactId>
+        <version>3.4.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>lmf-search</artifactId>
+    <groupId>com.github.wikier</groupId>
+    <artifactId>marmotta-search</artifactId>
     <packaging>jar</packaging>
 
-    <name>LMF Module: Search</name>
-    <description>LMF Module offering semantic search functionality using Apache SOLR</description>
+    <name>Marmotta Search</name>
+    <description>Marmotta module offering semantic search functionality using Apache Solr</description>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.encoding>UTF-8</project.build.encoding>
+        <lmf.version>3.2.0-SNAPSHOT</lmf.version>
+        <solr.version>4.3.1</solr.version>
+        <jetty.version>9.0.3.v20130506</jetty.version>
+    </properties>
 
     <dependencies>
 
         <dependency>
             <groupId>org.apache.marmotta</groupId>
             <artifactId>marmotta-core</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.marmotta</groupId>
             <artifactId>marmotta-ldpath</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.marmotta</groupId>
-            <artifactId>marmotta-ldcache</artifactId>
+            <artifactId>marmotta-ldcache-kiwi</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>at.newmedialab.lmf</groupId>
             <artifactId>lmf-worker</artifactId>
-            <version>${project.version}</version>
+            <version>${lmf.version}</version>
         </dependency>
         <dependency>
             <groupId>at.newmedialab.lmf.util</groupId>
@@ -57,14 +68,17 @@
         <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-solrj</artifactId>
+            <version>${solr.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-core</artifactId>
+            <version>${solr.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-clustering</artifactId>
+            <version>${solr.version}</version>
             <scope>runtime</scope>
         </dependency>
         
@@ -76,6 +90,7 @@
         <dependency>
             <groupId>org.apache.marmotta</groupId>
             <artifactId>marmotta-core</artifactId>
+            <version>${project.version}</version>
             <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
@@ -144,4 +159,28 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>apache.releases</id>
+            <name>Apache Relesases Repository</name>
+            <url>https://repository.apache.org/content/repositories/releases/</url>
+        </repository>
+        <repository>
+            <id>apache.snapshots</id>
+            <name>Apache Snapshots Repository</name>
+            <url>https://repository.apache.org/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
+            <id>snml.releases</id>
+            <name>Salzburg NewMediaLab Repository</name>
+            <url>http://devel.kiwi-project.eu:8080/nexus/content/repositories/public/</url>
+        </repository>
+        <repository>
+            <id>snml.snapshots</id>
+            <name>Salzburg NewMediaLab Repository</name>
+            <url>http://devel.kiwi-project.eu:8080/nexus/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
+
 </project>
